facet-diff/tests/snapshots/diff_snapshots__diff_value_mixed_array_vs_tuple_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before───────────────────╮[0m
[38;2;86;95;137m│[0m[2m[[0m                        [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;255;158;100m1[39m[2m,[0m                     [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  "[38;2;158;206;106mhello[39m"[2m,[0m               [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;187;154;247mtrue[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m][0m                        [38;2;86;95;137m│[0m
[38;2;86;95;137m╰─────────────────────────╯[0m
[38;2;86;95;137m╭After────────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247m(i64, &str, bool)[39m[0m [2m([0m      [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;88;81m2[39m[2m,[0m                     [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  "[38;2;158;206;106mworld[39m"[2m,[0m               [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;81;164;224mfalse[39m[2m,[0m                 [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m)[0m                        [38;2;86;95;137m│[0m
[38;2;86;95;137m╰─────────────────────────╯[0m
[38;2;224;175;104m╔Diff═════════════════════╗[0m
[38;2;224;175;104m║[0m[38;2;247;118;142m[                        [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  1,                     [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  "hello",               [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  true,                  [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m][39m → [38;2;115;218;202m(i64, &str, bool) (  [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  2,                     [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  "world",               [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  false,                 [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m)[39m                        [38;2;224;175;104m║[0m
[38;2;224;175;104m╚═════════════════════════╝[0m
