facet-diff/tests/snapshots/diff_snapshots__diff_value_nested_object.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────────────────────────────────╮[0m
[36m│[0m[2m{[0m                                       [36m│[0m
[36m│[0m  [36muser[0m[2m: [0m[2m{[0m                               [36m│[0m
[36m│[0m    [36mname[0m[2m: [0m[33m"Alice"[0m[2m,[0m                      [36m│[0m
[36m│[0m    [36maddress[0m[2m: [0m[2m{[0m                          [36m│[0m
[36m│[0m      [36mcity[0m[2m: [0m[33m"Wonderland"[0m[2m,[0m               [36m│[0m
[36m│[0m    [2m}[0m[2m,[0m                                  [36m│[0m
[36m│[0m  [2m}[0m[2m,[0m                                    [36m│[0m
[36m│[0m[2m}[0m                                       [36m│[0m
[36m╰────────────────────────────────────────╯[0m
[32m╭After───────────────────────────────────╮[0m
[32m│[0m[2m{[0m                                       [32m│[0m
[32m│[0m  [36muser[0m[2m: [0m[2m{[0m                               [32m│[0m
[32m│[0m    [36mname[0m[2m: [0m[33m"Alice"[0m[2m,[0m                      [32m│[0m
[32m│[0m    [36maddress[0m[2m: [0m[2m{[0m                          [32m│[0m
[32m│[0m      [36mcity[0m[2m: [0m[33m"Elsewhere"[0m[2m,[0m                [32m│[0m
[32m│[0m    [2m}[0m[2m,[0m                                  [32m│[0m
[32m│[0m  [2m}[0m[2m,[0m                                    [32m│[0m
[32m│[0m[2m}[0m                                       [32m│[0m
[32m╰────────────────────────────────────────╯[0m
[33m╔Diff════════════════════════════════════╗[0m
[33m║[0m{                                       [33m║[0m
[33m║[0m  user: {                               [33m║[0m
[33m║[0m    address: {                          [33m║[0m
[33m║[0m      city: [31m"Wonderland"[39m → [32m"Elsewhere"[39m  [33m║[0m
[33m║[0m    }                                   [33m║[0m
[33m║[0m  }                                     [33m║[0m
[33m║[0m}                                       [33m║[0m
[33m╚════════════════════════════════════════╝[0m
