facet-diff/tests/snapshots/diff_snapshots__diff_value_nested_vs_nested_struct.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────╮
│{                              │
│  name: "Alice",               │
│  age: 30,                     │
│  address: {                   │
│    street: "123 Main St",     │
│    city: "Wonderland",        │
│  },                           │
│}                              │
╰───────────────────────────────╯
╭After──────────────────────────╮
│UserWithAddress {              │
│  name: "Alice",               │
│  age: 30,                     │
│  address: Address {           │
│    street: "123 Main St",     │
│    city: "Wonderland",        │
│  },                           │
│}                              │
╰───────────────────────────────╯
╔Diff═══════════════════════════╗
║{                              ║
║  .. 1 unchanged field         ║
║  address: (structurally equal)║
║  name: "Alice" → "Alice"      ║
║}                              ║
╚═══════════════════════════════╝
