facet-diff/tests/snapshots/diff_snapshots__diff_value_null_vs_value.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────╮[0m
[36m│[0m[35mnull[0m        [36m│[0m
[36m╰────────────╯[0m
[32m╭After───────╮[0m
[32m│[0m[36m42[0m          [32m│[0m
[32m╰────────────╯[0m
[33m╔Diff════════╗[0m
[33m║[0m[31mnull[39m → [32m42[39m   [33m║[0m
[33m╚════════════╝[0m
