facet-diff/tests/snapshots/diff_snapshots__diff_value_number_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: a.diff(&b).to_string()
---
[31m42[39m → [32m100[39m
