facet-diff/tests/snapshots/diff_snapshots__diff_value_number_vs_float_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before───────╮[0m
[38;2;86;95;137m│[0m[38;2;255;158;100m3.14[39m         [38;2;86;95;137m│[0m
[38;2;86;95;137m╰─────────────╯[0m
[38;2;86;95;137m╭After────────╮[0m
[38;2;86;95;137m│[0m[38;2;81;224;210m2.71[39m         [38;2;86;95;137m│[0m
[38;2;86;95;137m╰─────────────╯[0m
[38;2;224;175;104m╔Diff═════════╗[0m
[38;2;224;175;104m║[0m[38;2;247;118;142m3.14[39m → [38;2;115;218;202m2.71[39m  [38;2;224;175;104m║[0m
[38;2;224;175;104m╚═════════════╝[0m
